--- a/src/index.pug
+++ b/src/index.pug
@@ -11,7 +11,7 @@ div
     .text-sm.text-muted(ld="display", data-display="block"): div(ld="desc", style="margin:-.6em 0 .7em")
     .rounded.shadow-sm.border.mb-2.aspect-ratio.ratio-3by2.w-100(ld="sheet")
     .d-flex.g-2.align-items-end
-      div 總金額:
+      div #[span(t) 總金額]:
       div(ld="total")
       .text-sm.text-muted(ld="unit")
     .m-edit(ld="display",data-display="block"): .text-danger.text-sm.mt-2.note(ld-each="note")
