--- a/src/index.styl
+++ b/src/index.styl
@@ -1,3 +1,9 @@
 .sheet .disabled { background: #eee; color: #777 }
 .sheet .hl {border-bottom: 2px solid #000 }
 .sheet .name-field { white-space: normal; word-break: break-all }
+[ld=total].text-danger:after
+  font-family: ldi
+  display: inline
+  content: "\f03d"
+  font-size: .85em
+  margin-left: .5em
