--- a/src/index.pug
+++ b/src/index.pug
@@ -10,6 +10,19 @@ div
       .m-edit: .mf-note.text-sm(ld="limitation")
     .text-sm.text-muted(ld="display", data-display="block"): div(ld="desc", style="margin:-.6em 0 .7em")
     .rounded.shadow-sm.border.mb-2.aspect-ratio.ratio-3by2.w-100(ld="sheet")
+    .mb-2(ld="table")
+      .mb-2
+        .lc-sheet-row: .row-head.form-control(ld-each="head")
+        .lc-sheet-row(ld-each="row")
+          i.i-close(ld="close")
+          textarea.form-control(ld-each="col")
+      .btn.btn-sm.btn-outline-secondary(t,ld="add") 追加
+    .mb-2(ld="viewer")
+      .mb-2.lc-sheet-viewer
+        .lc-sheet-row: .row-head.form-control(ld-each="head")
+        .lc-sheet-row(ld-each="row")
+          .form-control(ld-each="col")
+
     .d-flex.g-2.align-items-end
       div #[span(t) 總金額]:
       .d-flex.align-items-center(ld="total")
