--- a/src/index.styl
+++ b/src/index.styl
@@ -41,7 +41,7 @@
     border-right: 0
     border-top-right-radius: 0
     border-bottom-right-radius: 0
-  .form-control:not(:nth-child(-n + 2))
+  .form-control:not(:nth-child(-n + 2)), .row-head:not(:nth-child(-n + 1))
     border-top-left-radius: 0
     border-bottom-left-radius: 0
 .lc-sheet-row:not(:last-child)
