--- a/src/index.styl
+++ b/src/index.styl
@@ -1,4 +1,5 @@
 .sheet .disabled { background: #eee; color: #777 }
+.sheet .number { text-align: right}
 .sheet .hl {border-bottom: 2px solid #000 }
 /* we set white-space to `normal` earlier.
    not sure whether pre-wrap or normal is better.
