--- a/src/index.styl
+++ b/src/index.styl
@@ -42,7 +42,8 @@
     left: -.75em
     cursor: pointer
   .form-wrapper, .form-control, .row-head
-    flex: 1 1 auto
+    flex: 1 1 1px
+    min-width: 0
   .form-wrapper
     display: flex
   .row-head:not(:last-child), .form-wrapper:not(:last-child) .form-control
