--- a/src/index.styl
+++ b/src/index.styl
@@ -46,11 +46,11 @@
     min-width: 0
   .form-wrapper
     display: flex
-  .row-head:not(:last-child), .form-wrapper:not(:last-child) .form-control
+  .form-wrapper:not(:last-child) .form-control
     border-right: 0
     border-top-right-radius: 0
     border-bottom-right-radius: 0
-  .row-head:not(:nth-child(-n + 1)), .form-wrapper:not(:nth-child(-n + 2)) .form-control
+  .form-wrapper:not(:nth-child(-n + 2)) .form-control
     border-top-left-radius: 0
     border-bottom-left-radius: 0
 .lc-sheet-row:not(:last-child)
